[package]
name = "dora2tf"
version = "0.1.0"
edition = "2021"
description = "Generates Terraform HCL from live AWS resources"

[dependencies]
clap            = { version = "4", features = ["derive"] }
aws-config      = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2     = "1"
aws-sdk-iam     = "1"
tokio           = { version = "1", features = ["full"] }
anyhow          = "1"
tracing         = "0.1"
tracing-subscriber = "0.3"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
convert_case    = "0.6"
